--- a/Asset/css/style.css
+++ b/Asset/css/style.css
@@ -2,170 +2,139 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-body, input, button {
-    font-family: 'Open Sans', sans-serif;
-}
-
-input, button {
-    font-size: 16px;
-}
-
-.head_bar {
-    padding: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: cornflowerblue;
-    color: white;
-}
-
-main {
-    max-width: 800px;
-    width: 80%;
-    margin: 0 auto;
-    padding: 16px;
-
-}
-
-.input_section {
-    display: flex;
-    flex-direction: column;
-    padding: 16px;
-    border: 1px solid black;
-    border-radius: 10px;
-}
-
-.input_section > h2 {
-    text-align: center;
-    color: cornflowerblue;
-}
-
-.input_section > form > .input {
-    margin: 8px 0;
-}
-
-.input_section > form > button {
-    background-color: cornflowerblue;
-    color: white;
-    border: 0;
-    border-radius: 5px;
-    display: block;
-    width: 100%;
-    padding: 8px;
-    cursor: pointer;
-}
-
-.input_section > form > button > span {
-    font-weight: bold;
-}
-
-.input_section > form > .input > input {
-    display: block;
-    width: 100%;
-    padding: 8px;
-    border-radius: 5px;
-}
-
-
-.input_section > form > .input > label {
-    color: cornflowerblue;
-    font-weight: bold;
-}
-
-.input_section > form > .input_inline {
-    margin: 12px 0;
-    display: flex;
-    align-items: center;
-}
-
-.input_section > form > .input_inline > label {
-    color: cornflowerblue;
-    font-weight: bold;
-    margin-right: 10px;
-}
-
-.search_section {
-    margin: 16px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 16px;
-    border: 1px solid black;
-    border-radius: 10px;
-}
-
-.search_section > h2 {
-    color: cornflowerblue;
-}
-
-.search_section > form {
-    padding: 16px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto 1fr 0.5fr;
-    grid-gap: 10px;
-}
-
-.search_section > form > label {
-    display: flex;
-    align-items: center;
-}
-
-.search_section > form > input {
-    padding: 5px;
-    border-radius: 5px;
-}
-
-.search_section > form > button {
-    background-color: cornflowerblue;
-    color: white;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.book_shelf {
-    margin: 16px 0 0 0;
-    border: 1px solid black;
-    padding: 16px;
-    border-radius: 10px;
-}
-
-.book_shelf > h2 {
-    color: cornflowerblue;
-}
-
-.book_shelf > .book_list {
-    padding: 16px;
-}
-
-.book_shelf > .book_list > .book_item {
-    padding: 8px 16px 16px 16px;
-    border: 1px solid black;
-    border-radius: 5px;
-    margin: 10px 0;
-}
-
-.book_shelf > .book_list > .book_item > h3, p {
-    margin: 8px 0;
-}
-
-.book_shelf > .book_list > .book_item > .action > button {
-    border: 0;
-    padding: 5px;
-    margin: 0 5px 0 0;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.book_shelf > .book_list > .book_item > .action > .green {
-    background-color: darkgreen;
-    color: white;
-}
-
-.book_shelf > .book_list > .book_item > .action > .red {
-    background-color: darkred;
-    color: white;
-}
+  }
+  
+  body, input, button {
+    font-family: 'Roboto', sans-serif;
+  }
+  body {
+  background-image: url("Asset/background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto 1600px;
+  }
+  h1 {
+  text-align: center;
+  margin: 20px;
+  font-size: 42px;
+  }
+  main {
+  margin: 0px 30px auto;
+  display: flex;
+  }
+  .container {
+  width: 50%;
+  }
+  section {
+  background-color: white;
+  padding: 32px;
+  border-radius: 24px;
+  margin-bottom: 24px;
+  box-shadow: 8px 8px 40px #0000002c;
+  }
+  h2 {
+  text-align: center;
+  font-size: 35px;
+  margin-bottom: 28px;
+  }
+  .input_section > form > .input > label, .search_section > form > label {
+  display: block;
+  margin-bottom: 8px;
+  font-size: 20px;
+  }
+  .input_section > form > .input_inline {
+  margin-bottom: 24px;
+  font-size: 20px;
+  }
+  .input_section > form > .input_inline > input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  }
+  .input_section > form > .input > input {
+  width: 100%;
+  height: 50px;
+  padding: 0px 12px;
+  font-size: 20px;
+  border: solid 1px #323232;
+  border-radius: 18px;
+  box-shadow: 10px 10px 26px #0000002c;
+  margin-bottom: 24px;
+  }
+  .input_section > form > button {
+  background-color: #323232;
+  width: 100%;
+  height: 50px;
+  font-size: 20px;
+  color: white;
+  border-radius: 18px;
+  border: none;
+  box-shadow: 10px 10px 26px #00000040;
+  }
+  .input_section > form > button:hover {
+  color: #323232;
+  background-color: white;
+  transition: ease-in-out 500ms;
+  }
+  .search_section > form > .container_search > input {
+  width: 100%;
+  height: 50px;
+  padding: 0px 12px;
+  font-size: 20px;
+  border: solid 1px #323232;
+  border-radius: 18px;
+  box-shadow: 10px 10px 26px #0000002c;
+  }
+  .container_search {
+  position: relative;
+  }
+  .search_section > form > .container_search > button {
+  width: 25px;
+  position: absolute;
+  right: 18px;
+  top: 15px;
+  }
+  .search_section > form#searchBook {
+  margin-bottom: 40px;
+  }
+  .book_container {
+  border: solid 1px #323232;
+  border-radius: 18px;
+  box-shadow: 10px 10px 26px #0000002c;
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 30px;
+  }
+  .book_container > .book_item > h3 {
+  font-size: 26px;
+  margin-bottom: 20px;
+  }
+  .book_container > .book_item > p {
+  font-size: 20px;
+  margin-top: 5px;
+  }
+  .book_container > .action > button {
+  background-color: #323232;
+  border-radius: 9999px;
+  color: white;
+  padding: 8px 12px;
+  font-size: 14px;
+  margin-right: 5px;
+  display: block;
+  box-shadow: 5px 5px 10px #0000002c
+  }
+  .book_container > .action {
+  display: flex;
+  justify-items: end;
+  }
+  button#searchSubmit {
+  border: none;
+  background: none;
+  }
+  .book_container > .action > button:hover {
+  background-color: white;
+  color: #323232;
+  border: none;
+  transition: ease-in-out 500ms;
+  }
